@@ -681,6 +681,15 @@ name|bytes
 operator|.
 name|length
 expr_stmt|;
+if|if
+condition|(
+name|termsEnum
+operator|==
+literal|null
+condition|)
+return|return
+literal|false
+return|;
 return|return
 name|termsEnum
 operator|.
@@ -777,6 +786,15 @@ name|lastLeaf
 operator|=
 name|leafCell
 expr_stmt|;
+if|if
+condition|(
+name|termsEnum
+operator|==
+literal|null
+condition|)
+return|return
+literal|null
+return|;
 name|BytesRef
 name|nextTerm
 init|=
