@@ -362,6 +362,20 @@ argument_list|,
 name|directory
 argument_list|)
 expr_stmt|;
+name|indexReader
+operator|=
+name|indexWriter
+operator|.
+name|getReader
+argument_list|()
+expr_stmt|;
+name|indexSearcher
+operator|=
+name|newSearcher
+argument_list|(
+name|indexReader
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Override
