@@ -1308,6 +1308,45 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+comment|//first show that when there's no data, a query will result in no results
+block|{
+name|Query
+name|query
+init|=
+name|strategy
+operator|.
+name|makeQuery
+argument_list|(
+operator|new
+name|SpatialArgs
+argument_list|(
+name|operation
+argument_list|,
+name|randomRectangle
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|SearchResults
+name|searchResults
+init|=
+name|executeQuery
+argument_list|(
+name|query
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|searchResults
+operator|.
+name|numFound
+argument_list|)
+expr_stmt|;
+block|}
 specifier|final
 name|boolean
 name|biasContains
